Fixed vert title not being visible

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -404,6 +404,7 @@ moo-icon.dark {
 	font-size: 9pt;
 	height: 50%;
 	/*height: calc(50% - 14pt);*/
+	color: white;
 }
 
 .title-vert-1 {
